--- a/assets/main.scss
+++ b/assets/main.scss
@@ -311,3 +311,38 @@ input[type="range"].slider:focus::-ms-fill-lower {
 input[type="range"].slider:focus::-ms-fill-upper {
   background: $brandprimary;
 }
+
+
+.install-pwa-section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+
+  @media screen and (max-width: 699px) {
+    margin-bottom: 0;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    padding: 10px;
+
+    button {
+      position: relative;
+      z-index: 2;
+    }
+
+    &::before {
+      z-index: 1;
+      content: '';
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(white, .6);
+      backdrop-filter: blur(2px);
+    }
+  }
+}
