--- a/assets/main.scss
+++ b/assets/main.scss
@@ -51,7 +51,7 @@ a:visited {
   transition: 0.3s all ease;
 }
 
-button {
+button, .btn {
   border: 1px solid #ccc;
   background: white;
   padding: 10px 14px;
@@ -78,13 +78,19 @@ button.purchase {
   }
 }
 
-button.install-pwa {
+.btn.install-pwa, button.install-pwa {
   background: #5F29C1;
   color: white;
   font-size: 16px;
   border: none;
   padding: 18px 30px;
   border-radius: 6px;
+
+  &.is-outlined {
+    background-color: transparent;
+    box-shadow: inset 0 0 0 2px #5F29C1;
+    color: #5F29C1;
+  }
 }
 
 button.pay-with-stripe {
